crates/narwhal-app/tests/snapshots/snapshots__connection_configured.snap
---
source: crates/narwhal-app/tests/snapshots.rs
expression: snapshot_core(&mut core)
---
┌ narwhal ───────────────────────┐┌ editor ────────────────────────────────────────────────────────────────────────────┐
│   ○ demo (sqlite)              ││  1 │                                                                               │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                │└────────────────────────────────────────────────────────────────────────────────────┘
│                                │┌ results ───────────────────────────────────────────────────────────────────────────┐
│                                ││  no results yet — Ctrl-; to run, :run-all for whole buffer                         │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
└────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────┘
 NOR   editor │ (no connection) │ ready
