crates/narwhal-app/tests/snapshots/snapshots__empty.snap
---
source: crates/narwhal-app/tests/snapshots.rs
expression: snapshot_core(&mut core)
---
┌ narwhal ───────────────────────┐┌ editor ────────────────────────────────────────────────────────────────────────────┐
│                                ││  1 │                                                                               │
│  no connections                ││                                                                                    │
│                                ││                                                                                    │
│  add one to connections.toml   ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                │└────────────────────────────────────────────────────────────────────────────────────┘
│                                │┌ results ───────────────────────────────────────────────────────────────────────────┐
│                                ││  no results yet — F5 / Alt-Enter runs cursor statement, F6 runs whole buffer, Ctrl-│
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
└────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────┘
  NOR editor  (no connection)  ready
