crates/narwhal-app/tests/snapshots/snapshots__rows_after_run.snap
---
source: crates/narwhal-app/tests/snapshots.rs
expression: rendered
---
┌ narwhal ───────────────────────┐┌ editor · SQLite ───────────────────────────────────────────────────────────────────┐
│   ● demo (sqlite)              ││  1 │ SELECT id, label FROM items ORDER BY id                                       │
│     ▾ main                     ││                                                                                    │
│       ▢ items                  ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                │└────────────────────────────────────────────────────────────────────────────────────┘
│                                │┌ results · 1/1 · 3 rows · ? ms · exec ──────────────────────────────────────────────┐
│                                ││id (INTEGER) label (TEXT)                                                           │
│                                ││                                                                                    │
│                                ││1            alpha                                                                  │
│                                ││2            beta                                                                   │
│                                ││3            gamma                                                                  │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
└────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────┘
  NOR editor  demo · sqlite  done · 1 statement(s)
